<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/all_items_linear_layout"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_item"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/first_item_number"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_1"/>
            <TextView
                android:id="@+id/first_item_first_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/Ivan"/>
            <TextView
                android:id="@+id/first_item_second_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/belyaev"/>
            <TextView
                android:id="@+id/first_item_phone"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/phone1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/second_item"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/second_item_number"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_2"/>
            <TextView
                android:id="@+id/second_item_first_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/Pavel"/>
            <TextView
                android:id="@+id/second_item_second_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/ponomarchuk"/>
            <TextView
                android:id="@+id/second_item_phone"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/phone2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/third_item"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/third_item_number"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_3"/>
            <TextView
                android:id="@+id/third_item_first_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/alex"/>
            <TextView
                android:id="@+id/third_item_second_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/ujacov"/>
            <TextView
                android:id="@+id/third_item_phone"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/phone3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fourth_item"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/fourth_item_number"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_4"/>
            <TextView
                android:id="@+id/fourth_item_first_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/nikita"/>
            <TextView
                android:id="@+id/fourth_item_second_name"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/bondarev"/>
            <TextView
                android:id="@+id/fourth_item_phone"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/phone4"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>